--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "contributors": [
     { "name": "Horaci Cuevas", "email": "horaci@gmail.com" }
   ],
-  "description": "A node module to create a http and https man-in-the-middle proxy",
-  "scripts": {},
-  "main": "proxy",
-  "engines": { "node": ">0.4.0" },
-  "keywords": [ "proxy", "mitm", "http", "https" ],
+  "description" : "A node module to create a http and https man-in-the-middle proxy",
+  "main" : "proxy",
+  "engines" : { "node": ">0.4.0" },
+  "keywords" : [ "proxy", "mitm", "http", "https" ],
   "dependencies" : {
-    "colors": ">=0.1.0",
+    "colors" : ">=0.1.0"
   },
-  "repository": { "type": "git", "url": "http://github.com/horaci/node-mitm-proxy.git"}
+  "repository" : { 
+    "type": "git", 
+    "url": "http://github.com/horaci/node-mitm-proxy.git"
+  }
 }
